# src/main/app/handlers/secrets/secret_handler.go
@@ -32,9 +32,9 @@ func NewSecretHandler(appService apps.IAppService, secretService secrets.ISecret
 // @Tags		secrets
 // @Accept		json
 // @Produce		json
-// @Param		createAppSecretModel	body model.Secret  true "Body params"
+// @Param		createAppSecretModel	body model.CreateSecretRequest  true "Body params"
 // @Param		appID  path int true "Pet ID"
-// @Success		200  {array}   model.Secret
+// @Success		200  {array}   model.CreateSecretResponse
 // @Failure		404  {object}  server.Error "App not found"
 // @Failure		409  {object}  server.Error "Key already exist"
 // @Failure		500  {object}  server.Error "Internal server error"
@@ -45,7 +45,7 @@ func (h SecretHandler) CreateSecret(ctx *fiber.Ctx) error {
 		return err
 	}
 
-	request := new(model.Secret)
+	request := new(model.CreateSecretRequest)
 	if err = ctx.BodyParser(request); err != nil {
 		return server.NewError(http.StatusBadRequest, "bad request error, missing key and value properties")
 	}
