# src/main/app/model/secret.go
@@ -1,8 +1,12 @@
 package model
 
-type Secret struct {
+type CreateSecretRequest struct {
+	Key   string `json:"key,omitempty"`
+	Value string `json:"value,omitempty"`
+}
+
+type CreateSecretResponse struct {
 	Key         string `json:"key,omitempty"`
-	Value       string `json:"value,omitempty"`
 	SnippetURL  string `json:"snippet_url,omitempty"`
 	OriginalKey string `json:"original_key,omitempty"`
 }
